# chat_multiple_clients

./: .gitignore  CMakeLists.txt  multiple_clients.sh
client/: main.cpp
server/: main.cpp  manager.cpp  manager.hpp  socket.cpp  socket.hpp
